--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
                 <div class="row content">
                     <div class="col-lg-6">
-                        <h2>APPLE EVENT</h2>
+                        <h2>yooble EVENT</h2>
                         <h3>Introducing an all-new iPhone line-up, rebuilt AirPods Pro and three new Apple Watch models.</h3>
                     </div>
                     <div class="col-lg-6 pt-4 pt-lg-0">
